@@ -24,6 +24,7 @@
 #include <Rcpp.h>
 
 RcppExport SEXP newRcppStringVectorExample(SEXP strvec) {
+BEGIN_RCPP
 
     Rcpp::StringVector orig(strvec);		// creates Rcpp string vector from SEXP
     Rcpp::StringVector vec(orig.size());	
@@ -36,6 +37,8 @@ RcppExport SEXP newRcppStringVectorExample(SEXP strvec) {
     	Rcpp::Named( "original" ) = orig ) ;
 
     return res;
+
+END_RCPP
 }
 
 RcppExport SEXP classicRcppStringVectorExample(SEXP strvec) {
